# src/routes/productos.routes.ts
@@ -1,23 +1,16 @@
-import { pool } from "../config/db.js";
-import type { Request, Response } from "express";
 import { Router } from "express";
+import {
+  getProducts,
+  getProductsById,
+  postProduct,
+  putProduct,
+} from "../controller/product.controller.js";
 
 export const ProductosRouter: Router = Router();
 
-export async function getProducts(req: Request, res: Response) {
-  try {
-    const result = await pool.query("SELECT * FROM producto");
-    res.json({
-      message: "conexion exitosa",
-      total: result.rowCount,
-      data: result.rows,
-    });
-  } catch (error) {
-    console.log("error al consultar en postgres");
-    res
-      .status(500)
-      .json({ message: "error al conectar con la base de datos " });
-  }
-}
+ProductosRouter.get("/", getProducts);
+ProductosRouter.get("/:id", getProductsById);
+ProductosRouter.post("/", postProduct);
+ProductosRouter.put("/:id", putProduct);
 
 export default ProductosRouter;
